# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.sqlx/: query-d29daac05021bf812c033d20d98c5bb23fafcb7e60372d86fe5a19ad9d613107.json
configuration/: base.yaml  production.yaml
migrations/: 20241216172057_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
