[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7.15"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.19.0"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
once_cell = "1.20.2"
fake = "3.0.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8", features = ["std_rng"] }
wiremock = "0.6.2"
serde_json = "1"
